feat: 全面重构合金炉逻辑、配方匹配逻辑
Signed-off-by: C-H716 <1536152356@qq.com>